--- a/models/cv_logistic+boosting.ipynb
+++ b/models/cv_logistic+boosting.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modeling with Logistic Classification and XGBoost"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -61,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,11 +76,11 @@
     "    scoring = 'f1_weighted'  # scoring methods: https://scikit-learn.org/stable/modules/model_evaluation.html#common-cases-predefined-values\n",
     "\n",
     "    parameters = {\n",
-    "        'C': [0.01, 0.1, 1],  # Regularization parameter\n",
-    "        'penalty': ['l1', 'l2'],  # Penalty term\n",
+    "        'C': [.1, .5, 1, 1.5, 2],  # Regularization parameter\n",
+    "        'penalty': ['l1'],  # Penalty term\n",
     "    }\n",
     "    \n",
-    "    lr = LogisticRegression(solver='saga', max_iter=100, multi_class='multinomial', random_state=seed)\n",
+    "    lr = LogisticRegression(solver='saga', max_iter=200, multi_class='multinomial', random_state=seed)\n",
     "    clf = GridSearchCV(lr, parameters, scoring='f1_weighted', cv=5)  # grid search with cross validation\n",
     "    clf.fit(X, y)\n",
     "\n",
@@ -87,23 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/nfs/home/njb8158/.conda/envs/pa2/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/nfs/home/njb8158/.conda/envs/pa2/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/nfs/home/njb8158/.conda/envs/pa2/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/nfs/home/njb8158/.conda/envs/pa2/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/nfs/home/njb8158/.conda/envs/pa2/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
       "/nfs/home/njb8158/.conda/envs/pa2/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
       "/nfs/home/njb8158/.conda/envs/pa2/lib/python3.11/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
@@ -161,7 +158,7 @@
      "output_type": "stream",
      "text": [
       "Best f1_weighted score: 0.88\n",
-      " Best params: {'C': 1, 'penalty': 'l1'}\n"
+      " Best params: {'C': 0.5, 'penalty': 'l1'}\n"
      ]
     },
     {
@@ -179,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overall accuracy: 0.92175\n"
+      "Overall accuracy: 0.90405\n"
      ]
     }
    ],
