Correct plotting function

--- a/models/oversampling.ipynb
+++ b/models/oversampling.ipynb
@@ -83,7 +83,6 @@
    "source": [
     "# plot confusion matrix\n",
     "def plot_cm(y_true, y_pred):\n",
-    "    #labels = range(0, 6)\n",
     "    class_labels = [\"sadness\", \"joy\", \"love\", \"anger\", \"fear\", \"surprise\"]\n",
     "\n",
     "    # Map true and predicted indices to class labels\n",
@@ -91,7 +90,7 @@
     "    y_pred = [class_labels[i] for i in y_pred]\n",
     "\n",
     "    # print classification report\n",
-    "    print(classification_report(y_true, y_pred, labels=labels, target_names=class_labels))\n",
+    "    print(classification_report(y_true, y_pred, target_names=class_labels))\n",
     "\n",
     "    # Create confusion matrix\n",
     "    conf_mat = confusion_matrix(y_true, y_pred, labels=class_labels)\n",
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,11 +167,11 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     sadness       0.92      0.90      0.91      5797\n",
-      "         joy       0.86      0.92      0.89      6761\n",
-      "        love       0.84      0.75      0.79      1641\n",
-      "       anger       0.88      0.86      0.87      2709\n",
-      "        fear       0.82      0.86      0.84      2373\n",
+      "     sadness       0.88      0.86      0.87      2709\n",
+      "         joy       0.82      0.86      0.84      2373\n",
+      "        love       0.86      0.92      0.89      6761\n",
+      "       anger       0.84      0.75      0.79      1641\n",
+      "        fear       0.92      0.90      0.91      5797\n",
       "    surprise       0.89      0.66      0.76       719\n",
       "\n",
       "    accuracy                           0.87     20000\n",
@@ -395,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. RF with random oversampling\n",
+    "### 3. RF with random oversampling\n",
     "Random over-sampling the not majority class: Resampled dataset shape Counter({0: 6761, 3: 6761, 2: 6761, 5: 6761, 4: 6761, 1: 6761})"
    ]
   },
@@ -485,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. RF with SMOTE"
+    "### 4. RF with SMOTE"
    ]
   },
   {
