Correct function output

--- a/models/logistic_classifier.ipynb
+++ b/models/logistic_classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "array([4076, 4076, 4076, 4076, 4076, 4076])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
        "                   random_state=42, solver='saga')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
     "    ### YOUR CODE STARTS HERE ###\n",
     "\n",
     "    # extract coefficients from trained model and sort based on coefficient\n",
-    "    args = np.argsort(classifier.coef_[5])\n",
+    "    args = np.argsort(classifier.coef_[0])\n",
     "    top_args = args[-K:][::-1]\n",
     "    low_args = args[:K]\n",
     "    vocab = {v : k for k, v in vectorizer.vocabulary_.items()}\n",
@@ -1051,17 +1051,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "topK_pos_weights [-1.106 -1.304 -0.274 -1.317 -1.141 -0.122  0.     0.    -1.214 -1.03 ]\n",
-      "topK_pos_terms ['amazed', 'dazed', 'curious', 'stunned', 'impressed', 'shocked', 'surprised', 'funny', 'enthralled', 'strange']\n",
-      "topK_neg_weights [3.249 0.071 0.    0.    0.    0.    0.    0.    0.    0.   ]\n",
-      "topK_neg_terms ['awkward', 'does', 'skin', 'wear', 'teacher', 'class', 'stop', 'happened', 'began', 'house']\n"
+      "topK_pos_weights [5.463 5.457 5.378 5.363 5.299 5.231 5.118 5.114 5.087 5.036]\n",
+      "topK_pos_terms ['disturbed', 'heartbroken', 'doomed', 'messy', 'punished', 'troubled', 'dumb', 'gloomy', 'homesick', 'abused']\n",
+      "topK_neg_weights [-1.856 -1.773 -1.739 -1.733 -1.679 -1.653 -1.653 -1.631 -1.598 -1.581]\n",
+      "topK_neg_terms ['restless', 'cranky', 'faithful', 'pissed', 'accepted', 'feel super', 'passionate', 'doesn', 'violent', 'act']\n"
      ]
     }
    ],
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
        "5  surprise     719  0.03595"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
