add models trained on balanced data

--- a/models/logistic_classifier _rebalanced.ipynb
+++ b/models/logistic_classifier _rebalanced.ipynb
@@ -61,11 +61,18 @@
       "X_test shape: (4000, 5009)\n",
       "y_train shape: (12000,)\n",
       "y_val shape: (4000,)\n",
-      "y_test shape: (4000,)\n"
+      "y_test shape: (4000,)\n",
+      "X_train_oversampled shape: (24456, 5009)\n",
+      "y_train_oversampled shape: (24456,)\n"
      ]
     }
    ],
    "source": [
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "X = data['text']\n",
+    "y = data['category']\n",
+    "\n",
     "# Vectorizing the data\n",
     "vectorizer_try = CountVectorizer(stop_words='english', min_df=0.0003, ngram_range=(1, 4))\n",
     "X_encoded = vectorizer_try.fit_transform(X)\n",
@@ -73,18 +80,24 @@
     "# Printing data shape\n",
     "print('Data shape: ', X_encoded.shape)\n",
     "\n",
-    "\n",
     "# Splitting the data and renaming variables\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X_encoded, y, test_size=0.4, random_state=42)\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
-    "              \n",
+    "\n",
+    "# Random Oversampling\n",
+    "sampler = RandomOverSampler(sampling_strategy='not majority', random_state=42)\n",
+    "X_train_oversampled, y_train_oversampled = sampler.fit_resample(X_train, y_train)\n",
+    "\n",
     "# Displaying the shapes of the resulting sets\n",
     "print(\"X_train shape:\", X_train.shape)\n",
     "print(\"X_val shape:\", X_val.shape)\n",
     "print(\"X_test shape:\", X_test.shape)\n",
     "print(\"y_train shape:\", y_train.shape)\n",
     "print(\"y_val shape:\", y_val.shape)\n",
-    "print(\"y_test shape:\", y_test.shape)"
+    "print(\"y_test shape:\", y_test.shape)\n",
+    "\n",
+    "print(\"X_train_oversampled shape:\", X_train_oversampled.shape)\n",
+    "print(\"y_train_oversampled shape:\", y_train_oversampled.shape)"
    ]
   },
   {
@@ -454,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +475,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Validation accuracy: 89.6250\n",
+      "Validation accuracy: 89.62500\n",
       "\n",
       "Confusion Matrix (Validation):\n",
       "[[1094   37    6   23   20    0]\n",
@@ -472,9 +485,9 @@
       " [  21   12    0   11  394   16]\n",
       " [   5   10    0    4   18  117]]\n",
       "\n",
-      "F1 Score (Validation): 0.8959\n",
+      "F1 Score (Validation): 0.89591\n",
       "\n",
-      "Testing accuracy: 90.8750\n",
+      "Testing accuracy: 90.87500\n",
       "\n",
       "Confusion Matrix (Test):\n",
       "[[1098   34    1   27   14    1]\n",
@@ -484,14 +497,14 @@
       " [  20    7    2   17  390   12]\n",
       " [   4    6    0    1   30   95]]\n",
       "\n",
-      "F1 Score (Test): 0.9083\n"
+      "F1 Score (Test): 0.90826\n"
      ]
     }
    ],
    "source": [
     "val_predictions = best_classifier.predict(X_val)\n",
     "val_accuracy = np.mean(val_predictions == y_val)\n",
-    "print('\\nValidation accuracy:', format(100 * val_accuracy, '.4f'))\n",
+    "print('\\nValidation accuracy:', format(100 * val_accuracy, '.5f'))\n",
     "\n",
     "# Compute and print the confusion matrix for validation data\n",
     "cm_val = confusion_matrix(y_val, val_predictions)\n",
@@ -500,12 +513,12 @@
     "\n",
     "# Compute and print F1 score on the validation data\n",
     "val_f1 = f1_score(y_val, val_predictions, average='weighted')\n",
-    "print('\\nF1 Score (Validation):', format(val_f1, '.4f'))\n",
+    "print('\\nF1 Score (Validation):', format(val_f1, '.5f'))\n",
     "\n",
     "# Compute and print accuracy on the test data\n",
     "test_predictions = best_classifier.predict(X_test)\n",
     "test_accuracy = np.mean(test_predictions == y_test)\n",
-    "print('\\nTesting accuracy:', format(100 * test_accuracy, '.4f'))\n",
+    "print('\\nTesting accuracy:', format(100 * test_accuracy, '.5f'))\n",
     "\n",
     "# Compute and print the confusion matrix for test data\n",
     "cm_test = confusion_matrix(y_test, test_predictions)\n",
@@ -514,7 +527,7 @@
     "\n",
     "# Compute and print F1 score on the test data\n",
     "test_f1 = f1_score(y_test, test_predictions, average='weighted')\n",
-    "print('\\nF1 Score (Test):', format(test_f1, '.4f'))"
+    "print('\\nF1 Score (Test):', format(test_f1, '.5f'))"
    ]
   },
   {
@@ -526,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +641,7 @@
        "array([4076, 4076, 4076, 4076, 4076, 4076])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +754,7 @@
        "                   random_state=42, solver='saga')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +907,7 @@
        "5  surprise     719  0.03595"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
