--- a/models/random_forest_classifier_resampled.ipynb
+++ b/models/random_forest_classifier_resampled.ipynb
@@ -118,13 +118,18 @@
       "X_test shape: (4000, 5009)\n",
       "y_train shape: (12000,)\n",
       "y_val shape: (4000,)\n",
-      "y_test shape: (4000,)\n"
+      "y_test shape: (4000,)\n",
+      "X_train_oversampled shape: (24456, 5009)\n",
+      "y_train_oversampled shape: (24456,)\n"
      ]
     }
    ],
    "source": [
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
     "X = data['text']\n",
     "y = data['category']\n",
+    "\n",
     "# Vectorizing the data\n",
     "vectorizer_try = CountVectorizer(stop_words='english', min_df=0.0003, ngram_range=(1, 4))\n",
     "X_encoded = vectorizer_try.fit_transform(X)\n",
@@ -132,10 +137,13 @@
     "# Printing data shape\n",
     "print('Data shape: ', X_encoded.shape)\n",
     "\n",
-    "\n",
     "# Splitting the data and renaming variables\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X_encoded, y, test_size=0.4, random_state=42)\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# Random Oversampling\n",
+    "sampler = RandomOverSampler(sampling_strategy='not majority', random_state=42)\n",
+    "X_train_oversampled, y_train_oversampled = sampler.fit_resample(X_train, y_train)\n",
     "\n",
     "# Displaying the shapes of the resulting sets\n",
     "print(\"X_train shape:\", X_train.shape)\n",
@@ -143,7 +151,10 @@
     "print(\"X_test shape:\", X_test.shape)\n",
     "print(\"y_train shape:\", y_train.shape)\n",
     "print(\"y_val shape:\", y_val.shape)\n",
-    "print(\"y_test shape:\", y_test.shape)"
+    "print(\"y_test shape:\", y_test.shape)\n",
+    "\n",
+    "print(\"X_train_oversampled shape:\", X_train_oversampled.shape)\n",
+    "print(\"y_train_oversampled shape:\", y_train_oversampled.shape)"
    ]
   },
   {
@@ -166,7 +177,7 @@
     "def random_forest_classification(X_train, y_train, X_val, y_val, X_test, y_test):\n",
     "    # Define the parameter grid for Random Forest\n",
     "    param_grid = {\n",
-    "        'n_estimators': [100, 150, 200],\n",
+    "        'n_estimators': [100, 150, 200, 250],\n",
     "        'max_depth': [None, 5, 10, 15],\n",
     "        'min_samples_split': [2, 4, 6, 8]\n",
     "    }\n",
@@ -218,20 +229,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: {'max_depth': None, 'min_samples_split': 6, 'n_estimators': 100}\n",
+      "Best Parameters: {'max_depth': None, 'min_samples_split': 2, 'n_estimators': 100}\n",
       "\n",
-      "Validation accuracy: 0.88\n",
+      "Validation accuracy: 0.86925\n",
       "\n",
-      "F1 Score (Validation): 0.8797904880318121\n",
+      "F1 Score (Validation): 0.8710926009990256\n",
       "\n",
-      "Testing accuracy: 0.9005\n",
+      "Testing accuracy: 0.886\n",
       "\n",
-      "F1 Score (Test): 0.8999829839112801\n"
+      "F1 Score (Test): 0.8876206913455946\n"
      ]
     }
    ],
    "source": [
-    "best_rf_classifier = random_forest_classification(X_train, y_train, X_val, y_val, X_test, y_test)"
+    "best_rf_classifier = random_forest_classification(X_train_oversampled, y_train_oversampled, X_val, y_val, X_test, y_test)"
    ]
   },
   {
@@ -262,7 +273,7 @@
    ],
    "source": [
     "best_classifier = RandomForestClassifier(max_depth=None, n_estimators=150, min_samples_split=5, random_state=42)\n",
-    "best_classifier.fit(X_train, y_train)"
+    "best_classifier.fit(X_train_oversampled, y_train_oversampled)"
    ]
   },
   {
@@ -281,29 +292,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Validation accuracy: 88.0250\n",
+      "Validation accuracy: 87.0750\n",
       "\n",
       "Confusion Matrix (Validation):\n",
-      "[[1076   31   10   22   37    4]\n",
-      " [  42 1193   48   13   13    3]\n",
-      " [   4   81  259    3    2    0]\n",
-      " [  27   22    6  478   17    1]\n",
-      " [  10   11    0   11  393   29]\n",
-      " [   4    8    0    2   18  122]]\n",
+      "[[1034   33   16   45   48    4]\n",
+      " [  38 1134   93   19   18   10]\n",
+      " [   2   42  301    3    1    0]\n",
+      " [  14   15    9  481   27    5]\n",
+      " [   4    2    2   11  398   37]\n",
+      " [   3    5    0    1   10  135]]\n",
       "\n",
-      "F1 Score (Validation): 0.8801\n",
+      "F1 Score (Validation): 0.8728\n",
       "\n",
-      "Testing accuracy: 90.1000\n",
+      "Testing accuracy: 88.6750\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1085   24    6   33   24    3]\n",
-      " [  33 1281   36    9   11    3]\n",
-      " [   3   56  258    3    4    1]\n",
-      " [  27   20    0  486    9    1]\n",
-      " [  11    8    2   15  398   14]\n",
-      " [   1    9    1    2   27   96]]\n",
+      "[[1048   29   11   45   34    8]\n",
+      " [  36 1208   88   16   11   14]\n",
+      " [   1   33  287    1    2    1]\n",
+      " [  17   11    3  491   20    1]\n",
+      " [   4    4    5   12  401   22]\n",
+      " [   0    7    1    0   16  112]]\n",
       "\n",
-      "F1 Score (Test): 0.9006\n"
+      "F1 Score (Test): 0.888474\n"
      ]
     }
    ],
@@ -333,7 +344,7 @@
     "\n",
     "# Compute and print F1 score on the test data\n",
     "test_f1 = f1_score(y_test, test_predictions, average='weighted')\n",
-    "print('\\nF1 Score (Test):', format(test_f1, '.4f'))"
+    "print('\\nF1 Score (Test):', format(test_f1, '4f'))"
    ]
   },
   {
@@ -376,70 +387,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>shaken</td>\n",
-       "      <td>0.005969</td>\n",
+       "      <td>curious</td>\n",
+       "      <td>0.015248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>impressed</td>\n",
-       "      <td>0.005344</td>\n",
+       "      <td>0.014739</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>terrified</td>\n",
-       "      <td>0.005322</td>\n",
+       "      <td>amazed</td>\n",
+       "      <td>0.014645</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>amazed</td>\n",
-       "      <td>0.005249</td>\n",
+       "      <td>surprised</td>\n",
+       "      <td>0.012682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>apprehensive</td>\n",
-       "      <td>0.005220</td>\n",
+       "      <td>funny</td>\n",
+       "      <td>0.011457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>curious</td>\n",
-       "      <td>0.005069</td>\n",
+       "      <td>overwhelmed</td>\n",
+       "      <td>0.010446</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>bothered</td>\n",
-       "      <td>0.005019</td>\n",
+       "      <td>weird</td>\n",
+       "      <td>0.009330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>weird</td>\n",
-       "      <td>0.004919</td>\n",
+       "      <td>amazing</td>\n",
+       "      <td>0.009000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>violent</td>\n",
-       "      <td>0.004895</td>\n",
+       "      <td>shocked</td>\n",
+       "      <td>0.008890</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>reluctant</td>\n",
-       "      <td>0.004799</td>\n",
+       "      <td>strange</td>\n",
+       "      <td>0.008668</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Feature  Importance\n",
-       "0        shaken    0.005969\n",
-       "1     impressed    0.005344\n",
-       "2     terrified    0.005322\n",
-       "3        amazed    0.005249\n",
-       "4  apprehensive    0.005220\n",
-       "5       curious    0.005069\n",
-       "6      bothered    0.005019\n",
-       "7         weird    0.004919\n",
-       "8       violent    0.004895\n",
-       "9     reluctant    0.004799"
+       "       Feature  Importance\n",
+       "0      curious    0.015248\n",
+       "1    impressed    0.014739\n",
+       "2       amazed    0.014645\n",
+       "3    surprised    0.012682\n",
+       "4        funny    0.011457\n",
+       "5  overwhelmed    0.010446\n",
+       "6        weird    0.009330\n",
+       "7      amazing    0.009000\n",
+       "8      shocked    0.008890\n",
+       "9      strange    0.008668"
       ]
      },
      "execution_count": 7,
